# acme2certifier

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHALLENGE_REFACTORING_IMPLEMENTATION.md  CHALLENGE_REFACTORING_PROPOSAL.md  CHANGES.md  ChangeLog.md  Changes.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  USAGE_GUIDE.md  acme-clients.md  acme-srv.md  acme2certifier.py  acme_srv.md  authorization_invalidate.csv  certifier.md  challenge_refactoring_examples.py  csrv.py  email_handler.py  flake.nix  pyproject.toml  refactored_challenge_manager.py  refactored_challenge_models.py  refactored_challenge_processors.py  refactored_challenge_repository.py  requirements.txt  setup.py  sonar-project.properties
.github/: .codecov.yml  Caddyfile  FUNDING.yml  a2c.psql  acme2certifier.pem  acme2certifier_cabundle.pem  acme2certifier_cert.pem  acme2certifier_csr.pem  acme2certifier_key.pem  django_db.sqlite3  django_settings.py  django_settings_mariadb.py  django_settings_mssql.py  django_settings_psql.py  dns_test.sh  dnsmasq.conf  dnsmasq.yml  est_handler.patch  freeipa.yml  k8s-acme-srv.yml  k8s-cert-mgr-dns-01.yml  k8s-cert-mgr-http-01.yml  k8s-cert-mgr.yml  mlc_config.json  openssl_ca_handler.py_acme_srv.cfg  openssl_ca_handler.py_acme_srv_choosen_handler.cfg  openssl_ca_handler.py_acme_srv_default_handler.cfg  openssl_ca_handler.py_acme_srv_default_handler_dns.cfg  openssl_ca_handler_v16.py  pgpass  pycodestyle  pylintrc  traefik-matrix.yml
acme/: account.py  acme_srv.db.my  acmesrv.py  authorization.py  ca_handler.py  certificate.py  (+16 more)
(+627 files in other folders)
